--- a/MyService/src/main/resources/templates/index.html
+++ b/MyService/src/main/resources/templates/index.html
@@ -1,8 +1,9 @@
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<title>我是首頁Home</title>
 		<meta charset="UTF-8"/>
 		<!--CDN-->
+		<script th:src="@{/js/vue.js}"></script>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 	</head>
 	<body>
