--- a/MyService/src/main/resources/templates/custqryid.html
+++ b/MyService/src/main/resources/templates/custqryid.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
         <title>客戶資料查詢</title>
         <meta charset="UTF-8"/>
-        <script type="text/javascript" th:src="@{/vue.min.js}"></script>
+        <!-- 處理 ajax 的方法之一 -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script type="text/javascript" th:src="@{/axios.min.js}"></script>
+        <!-- 處理 ajax 的方法之一 -->
         <script type="text/javascript" th:src="@{/jquery-3.6.0.min.js}"></script>
-        <!--<script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>-->
+        <!-- Vue.js -->
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+        <script type="text/javascript" th:src="@{/vue.min.js}"></script>
     </head>
     <body>
+    <!--id 提供Vue物件的binding-->
         <fieldset id="app">
             <legend>客戶查詢-客戶編號</legend>
             <div>
@@ -20,6 +26,7 @@
                 <div>查詢客戶編號:{{customerid}}</div>
                 <div>{{message}}</div>
             </div>
+            <!--查詢結果呈現 isShow flag-->
             <fieldset v-show="isShow">
                 <legend>查詢結果</legend>
                 <table>
@@ -47,7 +54,7 @@
             </fieldset>
         </fieldset>
 
-        <script>
+        <script type="text/javascript">
             //建構一個Vue Instance
             var app=new Vue(
                 //settings JS物件
@@ -64,38 +71,57 @@
                         query:function(){
                             app.isShow=false;
                             console.log("查詢編號:"+this.customerid);
-                            var serviceURL='../nor/customers/id/'+this.customerid+'/rawdata';
-                            //進行非同步處理(AJAX-XMLHttpRequest/XMLHttpResponse)
-                           	$.ajax(
-                           //JS物件屬性定義相對屬性
-							{
-								//呼喚服務位址
-								url:serviceURL,
-								//傳送方式
-								type:'GET',
-								//callback status code:2xx
-								success:function(data,status,xhr){
-									console.log(data);
+                            //relative Document
+                            var serviceURL='qry/id/'+this.customerid+'/rawdata';
+                            //使用axios
+                            axios.get(serviceURL)
+                            .then((response)=>{
+                                console.log(response);
+                                if(response.status==200){
                                     app.isShow=true;
-                                    //將callback結果(Json Object)指派給Vue Data Model
-                                    app.result=data;
-                                    //TODO  Render UI(渲染畫面)
-								},
-                                //callback status 4xx or 5xx
-                                error:function(xhr,status,error){
-                                    var errorMsg=xhr.responseText;
-                                    //反序列化成JS 物件
-                                    var errorObj=JSON.parse(errorMsg);
-                                    alert(errorObj.msg);
-                                }
-							}	
+                                    console.log(typeof response.data);
+                                    //重新指派給Vue Data Model
+                                    app.result=response.data;
+								}
+                            })
+                            .catch((error)=>{
+                                console.log(error);
+                            })
+                            //進行非同步處理(AJAX-XMLHttpRequest/XMLHttpResponse)
+                        //    	$.ajax(
+                        //    //JS物件屬性定義相對屬性
+						// 	{
+						// 		//呼喚服務位址
+						// 		url:serviceURL,
+						// 		//傳送方式
+						// 		type:'GET',
+						// 		//callback status code:2xx
+						// 		success:function(data,status,xhr){
+						// 			console.log(data);
+                        //             app.isShow=true;
+                        //             //將callback結果(Json Object)指派給Vue Data Model
+                        //             app.result=data;
+                        //             //TODO  Render UI(渲染畫面)
+						// 		},
+                        //         //callback status 4xx or 5xx
+                        //         error:function(xhr,status,error){
+                        //             var errorMsg=xhr.responseText;
+                        //             //反序列化成JS 物件
+                        //             var errorObj=JSON.parse(errorMsg);
+                        //             alert(errorObj.msg);
+                        //         }
+						// 	}	
 		
-							);
+						// 	);
+
+                        
+
                         }
                     },
                     watch:{
                         "customerid":function(newValue,oldValue){
                            console.log('輸入的新編號:'+newValue);
+                           //Client 即時性Validation(驗證)
                            if(newValue.length==0){
                                this.message="客戶編號尚未輸入!!!";
                            }else{
